--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
